# fast-api-initial

./: .pre-commit-config.yaml  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 403846f62484_.py  5ff1a02cf142_.py  9bc3d9e6dc7c_.py
api/: courses.py  sections.py  user.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  users.py
pydantic_schemas/: courses.py  users.py
