[tool.poetry]
name = "fast-api-crash-course"
version = "0.1.0"
description = "First Fast Api project"
authors = ["danish21752 <danish21752@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
